--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,15 @@
 	filter: brightness(150%);
 } 
 
-.button {
+#purpleLight{
+  background-color: #680e92;
+}
+
+#purpleLight:hover {
+	filter: brightness(150%);
+} 
+
+button {
     padding: 15px 25px;
     font-size: 24px;
     text-align: center;
@@ -28,9 +36,9 @@
     box-shadow: 0 9px #999;
   }
   
-  .button:hover {background-color: #3e8e41}
+  button:hover {background-color: #3e8e41}
   
-  .button:active {
+  button:active {
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
